# ga-haskell-single-try

./: pkg-a.cabal
.github/workflows/: cabal-v1.yml  cabal.yml  pkgs.yml
CI/: cabal-opts-7.10.3  cabal-opts-7.6.3
src/: TestDatas.hs
tests/: useQuickCheckSimple.hs
