name:                pkg-a
version:             0.1.0.0
synopsis:            Test package A for Github Actions
description:         This is the test package A for Github Actions
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
tested-with:           GHC == 8.8.1
                     , GHC == 8.6.1, GHC == 8.6.2, GHC == 8.6.3, GHC == 8.6.4, GHC == 8.6.5
                     , GHC == 8.4.1, GHC == 8.4.2, GHC == 8.4.3, GHC == 8.4.4
                     , GHC == 8.2.1, GHC == 8.2.2
                     , GHC == 8.0.1, GHC == 8.0.2
                     , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                     , GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4
                     , GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3
                     , GHC == 7.4.1, GHC == 7.4.2

library
  exposed-modules:
                     TestDatas
  other-extensions:
                     TypeOperators
                     FlexibleContexts
                     OverloadedStrings
                     DeriveFunctor
                     DeriveFoldable
                     DeriveTraversable
                     -- DeriveGeneric
                     StandaloneDeriving

  build-depends:       base <5
                     , time
                     , time-locale-compat
                     , attoparsec
                     , dlist
  if impl(ghc >= 8)
                     , memory
  else
                     , memory <0.14
                     -- , relational-query-HDBC
  hs-source-dirs:    src
  default-language:  Haskell2010


test-suite use-quickcheck-simple
  type:             exitcode-stdio-1.0
  main-is:          useQuickCheckSimple.hs
  hs-source-dirs:   tests
  build-depends:    base <5, pkg-a,
                    quickcheck-simple
  default-language: Haskell2010

source-repository head
  type:       git
  location:   https://github.com/khibino/ga-haskell-cabal1-try
